<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Packages</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="password1">Confirm Password</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="user_name_or_email">Email or Username</string>
    <string name="title_activity_dash_board">DashBoard</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <color name="mycolor">#E51451</color>

    <string name="GPSAlertDialogTitle">GPS is setting</string>
    <string name="GPSAlertDialogMessage">GPS is not enabled. Do you want to go to setting menu</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>

    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>

    <string name="title_activity_posting_user_package">Post Item</string>

</resources>
