<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
   tools:context="com.zaingz.packages.Login" >

    <TextView
        android:id="@+id/appName1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_gravity="center"
        android:textSize="40sp"
        android:layout_marginTop="10dp"/>
    <EditText
        android:id="@+id/userName1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"/>
	<EditText
        android:id="@+id/email"
        android:inputType="textEmailAddress"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"/>
	
   
    
	
	  <EditText
        android:id="@+id/password1"
        android:inputType="textPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"/>
	  <EditText
        android:id="@+id/password2"
        android:inputType="textPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password1"/>
	  
	  
	  
	  <Button 
	      android:id="@+id/signIn1"
	      android:layout_width="match_parent"
	      android:layout_height="wrap_content"
	      android:onClick="signup1"
	      android:text="@string/sign_in"
	      
/>
	  


</LinearLayout>