<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
   tools:context="com.zaingz.packages.Login" >

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_gravity="center"
        android:textSize="40sp"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/userNameOrEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"/>
	
	  <EditText
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"/>
	  
	  <Button 
	      android:id="@+id/signIn"
	      android:layout_width="match_parent"
	      android:layout_height="wrap_content"
	      android:onClick="signIn"
	      android:text="@string/sign_in"
	      
	      />
	  <Button
        android:id="@+id/signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="signUp"
        android:text="@string/sign_up"
         />


</LinearLayout>